# zerotune

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  PERFORMANCE_ANALYSIS.md  POETRY_SETUP.md  PUBLICATION_CHARTS_GUIDE.md  README.md  THESIS_BENCHMARK_PLAN.md  benchmark_results_rf_kb_v1_full_20250807_102756.csv  benchmark_results_rf_kb_v1_full_20250807_102913.csv  benchmark_results_rf_kb_v1_full_20250807_111517.csv  benchmark_results_rf_kb_v1_full_20250807_120412.csv  benchmark_results_xgb_kb_v1_full_20250806_103227.csv  benchmark_results_xgb_kb_v1_full_20250806_113439.csv  benchmark_results_xgb_kb_v1_full_20250806_113609.csv  benchmark_results_xgb_kb_v1_full_20250806_192023.csv  benchmark_results_xgb_kb_v1_full_20250807_123740.csv  benchmark_results_xgb_kb_v1_full_20250807_142441.csv  benchmark_results_xgb_kb_v1_full_20250807_150338.csv  benchmark_results_xgb_kb_v1_full_20250807_153112.csv  benchmark_results_xgb_kb_v1_test_20250804_215134.csv  create_knowledge_base.py  decision_tree_experiment.py  openml_datasets.json  publication_analysis.py  pyproject.toml  pytest.ini  random_forest_experiment.py  requirements-test.txt  run.sh  setup.py  test_openml.py  test_openml_detailed.py  train_zerotune_model.py  use_zerotune_predictor.py  xgb_experiment.py
.cursor/rules/: coding-pattern-preferences.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml
knowledge_base/: kb_decision_tree_dt_kb_v1_full.json  kb_decision_tree_dt_kb_v1_test.json  kb_random_forest_rf_kb_v1_full.json  kb_random_forest_rf_kb_v1_test.json  kb_xgboost_xgb_kb_v1_full.json  kb_xgboost_xgb_kb_v1_test.json
models/: predictor_decision_tree_dt_kb_v1_full.joblib  predictor_random_forest_rf_kb_v1_full.joblib  predictor_xgboost_xgb_kb_v1_full.joblib
notebooks/: simple_zt_core.ipynb  xgb_experiment.ipynb  zt_optuna_example.ipynb
publication_outputs/DecisionTree_20250808_145536/: DecisionTree_statistical_summary_20250808_145536.csv  DecisionTree_warmstart_vs_standard_optuna_detailed_20250808_145536.csv  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_data_loading.py  test_environment.py  test_feature_extraction.py  test_find_similar_datasets.py  test_integration.py  test_knowledge_base.py  test_model_configs.py  test_predictors.py  test_pretrained_model.py  test_save_load_kb.py  test_update_knowledge_base.py  test_zerotune_basic.py  test_zerotune_cli.py  test_zerotune_core.py
zerotune/: __init__.py  __main__.py  knowledge_base.py  predictors.py  zerotune.py
zerotune/core/: __init__.py  utils.py  (+8 more)
(+122 files in other folders)
