[tool.poetry]
name = "zerotune"
version = "0.1.0"
description = "A Python module for one-shot hyperparameter optimization"
authors = ["ZeroTune Team <your.email@example.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["hyperparameter optimization", "machine learning", "meta-learning"]
packages = [{include = "zerotune"}]
include = ["zerotune/models/*.joblib"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "^1.3.0"
numpy = "^1.20.0"
scipy = "^1.7.0"
optuna = "^3.0.0"
scikit-learn = "^1.0.0"
tqdm = "^4.62.0"
joblib = "^1.1.0"
openml = "^0.12.0"
matplotlib = "<3.10"
importlib-resources = "<6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.10.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38", "py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=zerotune --cov-report=term-missing" 