[tool.poetry]
name = "zerotune"
version = "0.1.0"
description = "Zero-shot hyperparameter optimization using pre-trained meta-learning models - 100% win rate with Decision Trees"
authors = ["ZeroTune Research Team <contact@zerotune.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.0"
numpy = "^1.24.0"
tqdm = "^4.65.0"
scipy = "^1.10.0"
scikit-learn = "^1.2.0"
xgboost = "^1.7.0"
openml = ">=0.15.0"
joblib = "^1.2.0"
optuna = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.0"
ipykernel = ">=6.0.0,<6.30.0"

[tool.poetry.scripts]
zerotune = "zerotune.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 